# KeepItSimple

./: .gitignore  README.md  check.ps1  mkdocs.yml  pyproject.toml
docs/: index.md  release_notes.md
old/kiss/: _parallel.py
old/tests/: base.py
old/tests/integration/: test_parallel.py
old/tests/unit/: base.py  test_parallel.py
src/kiss/: parallel.py
tests/integration/: test_parallel.py
tests/unit/: test_parallel.py
