[tool.poetry]
name = "keep-it-simple"
version = "0.1.0"
description = "Simplified Python tools for happy coding."
packages = [{include = "kiss", from="src"}]

license = "MIT"
readme = "README.md"

authors = ["Max Snoodijk <max_snoodijk@live.nl>",]
maintainers = ["Max Snoodijk <max_snoodijk@live.nl>",]

[tool.poetry.dependencies]
python = ">= 3.9, <3.13"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
numpy = "^1.26.4"
pylint = "^3.2.3"
mypy = "^1.10.0"
coverage = "^7.5.3"
isort = "^5.13.2"
black = "^24.8.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.3"

[tool.mypy]
packages = ["src"]
cache_dir = "./local/mypy"
ignore_missing_imports = true

[tool.pylint]
max-line-length = 120
disable = [
    "too-few-public-methods",
    "too-many-public-methods",
    "too-many-instance-attributes",
    "too-many-arguments",
    "consider-using-with"
]

[tool.coverage.run]
source = ["src"]
data_file = "./local/coverage/data"
concurrency = ["multiprocessing", "thread"]
disable_warnings = ["no-data-collected"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
